@@ -1,38 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <title>
-      Welcome to Padrino
-    </title>
-    <style type="text/css">
-      body{font-family:Helvetica,Arial,sans-serif;line-height:150%}
-      ul,li{list-style-type:none;margin:0px;padding:5px 0px 5px 0px;margin-left:5px}
-      a{color:#333}
-    </style>
-  </head>
-  <body>
-    <h1>
-      Welcome to Padrino.rb
-    </h1>
-    <p>
-      Thanks for choosing Padrino for your Development.<br />
-      To get you started you we collected some Tutorials and Links:<br />
-    </p>
-    <ul>
-      <li>
-        <a href="http://www.padrinorb.com/guides/blog-tutorial">Blog Tutorial</a>
-      </li>
-      <li>
-        <a href="http://www.padrinorb.com/guides/generators">Generators</a>
-      </li>
-      <li>
-        <a href="http://www.padrinorb.com/guides/development-commands">Development Commands</a>
-      </li>
-    </ul>
-    <p>
-      To define a new default site for your project please delete this <em>index.html</em> file from the <em>public</em> directory.
-    </p>
-  </body>
-</html>
