@@ -19,6 +19,7 @@
 * Updated mongoid adapter to use 2.0.0.beta.20
 * Remove legacy bundler setup from config/boot.rb
 * Fixes error_message_on object name bug [Thanks craigp]
+* Removed default index page
 
 == 0.9.20
 
